--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Rubik&display=swap');
 
 *{
-    padding: 0;
-    margin: 0;
     color: white;
 }
 body{
     font-family: 'Manrope', sans-serif;
     font-family: 'Rubik', sans-serif;
-    background-color: #1a3c7d;
+    background-image: url(../img/fondo.png);
+    background-repeat: repeat-x;
+    background-color: #fff
 }
-
 img{
     width: 25em;
     height: 25em;
 }
 h1{
     font-size:xx-large;
+}
+#datos{
+    background-color:whitesmoke;
 }
