--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,7 @@
 *{
     color: white;
 }
-body{
-    font-family: 'Manrope', sans-serif;
-    font-family: 'Rubik', sans-serif;
-    background-image: url(../img/fondo.png);
-    background-repeat:repeat-x;
-    background-color: whitesmoke;
-}
+
 .button-height{
     width: 10em;
     height: 4em;
@@ -22,4 +16,23 @@ h1{
 }
 main{
     margin-top: 6em;
+}
+html, body { height: 100% }
+
+body {
+  background-color: #E0E6E7;
+  
+}
+
+h1 {
+  text-align: center;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
